Ajusting StateResource